--- a/src/components/HeroSection/hero.module.css
+++ b/src/components/HeroSection/hero.module.css
@@ -1,4 +1,4 @@
-.main {
+.home__section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,22 +15,10 @@
     padding: 4rem 12rem;
 }
 
-@media screen and (max-width: 768px) {
-    .hero__section {
-        padding: 3rem 1rem;
-    }
-}
-
 .hero__description {
     text-align: center;
     font-size: calc(2rem + 1vw);
     font-weight: 800;
-}
-
-@media screen and (max-width: 768px) {
-    .hero__description {
-        font-size: calc(2rem + 0.25vw);
-    }
 }
 
 .charts__section {
@@ -38,14 +26,22 @@
     align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+    .hero__section {
+        padding: 3rem 1rem;
+    }
+    .hero__description {
+        font-size: calc(2rem + 0.25vw);
+    }
+}
 @media screen and (max-width: 900px) {
     .charts__section {
         display: none;
     }
 }
-
-@media screen and (min-width: 901px) and (max-width: 1200px) {
+@media screen and (min-width: 901px) and (max-width: 1280px) {
     .charts__section {
         flex-direction: column;
+        gap: 1rem;
     }
 }
