Refactored navbar and header components

--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,8 +1,20 @@
-.navbar {
+.header {
     width: 100%;
     margin: 2rem 0 2rem;
     padding: 1rem 2rem;
     background-color: white;
+    border: 2px solid black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 2px 0px 4px black;
+}
+
+.navbar {
+    width: 100%;
+    margin: 0.5rem 0 2rem;
+    padding: 0.5rem 2rem;
+    background-color: var(--background-color);
     border: 2px solid black;
     display: flex;
     justify-content: space-between;
@@ -26,6 +38,27 @@
     font-weight: 600;
 }
 
+.navbar__desktop {
+    display: flex;
+    gap: 1.2rem;
+    align-items: center;
+}
+
+.navbar__desktop a {
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+.active_link {
+    border-bottom: 2px solid #0a3d62;
+}
+
+.navbar__mobile {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     .navbar {
         margin: 1rem 0 1rem;
@@ -35,6 +68,15 @@
         font-size: 1.05rem;
     }
     .navbar__subtitle {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .navbar__mobile {
+        display: block;
+    }
+    .navbar__desktop {
         display: none;
     }
 }
