--- a/src/components/Button/button.module.css
+++ b/src/components/Button/button.module.css
@@ -30,6 +30,25 @@
     box-shadow: black 6px 6px;
 }
 
+.spinner {
+    animation: spin 2s linear infinite;
+}
+
+.loading {
+    opacity: 0.7;
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 @media screen and (max-width: 768px) {
     .custom__btn {
         padding: 0.25rem 0.75rem;
