--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,3 +33,14 @@ p::-moz-selection {
 .ant-card {
     box-shadow: 2px 2px 4px black;
 }
+
+.custom-chart-toolip {
+    padding: 8px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 1px 1px 2px black;
+}
+
+.analytics-card {
+    box-shadow: 1px 1px 2px grey;
+}
