--- a/src/components/StepsSection/steps.module.css
+++ b/src/components/StepsSection/steps.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 6rem 0;
+    padding-top: 6rem;
     background-color: var(--background-color-2);
 }
 
@@ -15,6 +15,7 @@
 
 .cards__container {
     padding: 0 4rem;
+    margin-bottom: 6rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
