--- a/src/components/HeroSection/hero.module.css
+++ b/src/components/HeroSection/hero.module.css
@@ -9,16 +9,27 @@
 .hero__section {
     display: flex;
     flex-direction: column;
-    gap: 6rem;
+    gap: 4rem;
     align-items: center;
     width: 100%;
     padding: 4rem 12rem;
 }
 
-.hero__description {
+.hero__intro {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
     text-align: center;
-    font-size: calc(2rem + 1vw);
+}
+
+.hero__intro > h2 {
+    font-size: calc(2rem + 0.5vw);
     font-weight: 800;
+}
+.hero__intro h4 {
+    font-size: 1.25rem;
+    font-weight: 600;
 }
 
 .charts__section {
@@ -31,7 +42,7 @@
         padding: 3rem 1rem;
     }
     .hero__description {
-        font-size: calc(2rem + 0.25vw);
+        font-size: 2rem;
     }
 }
 @media screen and (max-width: 900px) {
